--- a/index.html
+++ b/index.html
@@ -11,10 +11,60 @@
 	<body>
 
 		<header>
-			<div class="container">
 				<h2 class="titulo">Aparecida Nutrição</h2>
-			</div>
 		</header>
+
+		<img class="container-img" src="img/download.jfif">
+
+		<section class="container-tabela">
+		    <h2 id="titulo-form">Adicionar novo paciente</h2>
+			<ul id="mensagens-erro"></ul>
+		    <form id="form-adiciona">
+		        <div class="">
+		            <label for="nome">Nome:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
+		        </div>
+		        <div class="grupo">
+		            <label for="peso">Peso:</label>
+		            <input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+		        </div>
+		        <div class="grupo">
+		            <label for="altura">Altura:</label>
+		            <input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
+		        </div>
+		        <div class="grupo">
+		            <label for="gordura">% de Gordura:</label>
+		            <input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
+				</div>
+				<div class="grupo">
+		            <label for="nome">Matricula:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite a matricula do paciente" class="campo campo-medio">
+		        </div>
+				<div class="grupo">
+		            <label for="nome">Idade:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite a idade do paciente" class="campo campo-medio">
+		        </div><div class="">
+		            <label for="nome">Telefone:</label>
+		            <input id="nome" name="nome" type="text" placeholder="55" class="campo campo-medio">
+		        </div>
+				<div class="grupo">
+		            <label for="nome">Celular:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite o número de telefone do paciente" class="campo campo-medio">
+		        </div>
+				<div class="grupo">
+		            <label for="nome">Estado civil:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite o estado civil do paciente" class="campo campo-medio">
+		        </div>
+				<div class="grupo">
+		            <label for="nome">Profissão:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite a profissão do paciente" class="campo campo-medio">
+		        </div>
+				<div class="provisorio">
+		            <label for="nome">Email:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite o e-mail do paciente" class="campo">
+		        <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+		    </form>
+		</section>
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
@@ -77,31 +127,6 @@
 
 			</section>
 		</main>
-
-		<section class="container">
-		    <h2 id="titulo-form">Adicionar novo paciente</h2>
-			<ul id="mensagens-erro"></ul>
-		    <form id="form-adiciona">
-		        <div class="">
-		            <label for="nome">Nome:</label>
-		            <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
-		        </div>
-		        <div class="grupo">
-		            <label for="peso">Peso:</label>
-		            <input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
-		        </div>
-		        <div class="grupo">
-		            <label for="altura">Altura:</label>
-		            <input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
-		        </div>
-		        <div class="grupo">
-		            <label for="gordura">% de Gordura:</label>
-		            <input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
-		        </div>
-
-		        <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
-		    </form>
-		</section>
 
 		<script src="js/calcula-imc.js" ></script>
 		<script src="js/form.js" ></script>
